--- a/client/src/assests/css/blog.css
+++ b/client/src/assests/css/blog.css
@@ -32,7 +32,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  height: 95vh;
+  min-height: 95vh;
 }
 .Blog-Details h2 {
   color: black;
@@ -66,6 +66,9 @@
 
 .Blog-Details .single-blog .single-blog-header {
   padding-bottom: 1rem;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 /* Blog-management */
